--- a/BBets.Rmd
+++ b/BBets.Rmd
@@ -91,17 +91,40 @@ for (i in 40:1000) {
 ## what is their average earnings
 ## the standard deviation and a 95% confidence interval for their earnings?  
 
+40 Brownlow's average earning is acyatllu lolsing $270.16.
 
 <!--Explain and display your method of coming up with a 95% confidence interval of  professor Brownlows winnings (or losings)-->
 
 
 # What are the fair odds? Use manipulation of odds in the function to tune Brownlows earnings to zero. 
 
+```{r}
+mymin=numeric(1000)
+for (i in 1:1000) {
+  mymin[i]=BrLw(odds=4.389)
+}
+ smymin<- sort(mymin)
+ 
+ low=smymin[25]
+ high=smymin[975]
+ 
+ mean(smymin)
+ 
+  cat("low value (25th percentile):", low, "\n")
+ cat("high value (975th percentile):", high, "\n")
+ 
+ hist(smymin,
+      main="Histogram of Sorted Values",
+      xlab="Values",
+      ylab="Frequency",
+      col="skyblue",
+      border="blue",
+      breaks=100)
+```
 
 <!--Decide on your methods:  In this section explain the approach you will take to attack the issue --- how will you decide on a likely estimate of professor Brownlow's earnings or losses after 637 bets. Also explain how you construct a 95% confidence interval about your estimate of his winnings !-->
 
-
-
+To determine how Brownlow's earnings reach zero, we used odds of 4.389. This value was obtained through trial and error and proved to be the most consistent for our analysis. We calculated a 95% confidence interval by defining our own low and high percentiles. By subtracting 25 from 1000 and then adding 25 from the bottom, we ensured that 95% of the data fell within the interval, giving us the desired confidence level.
 
 # What size of class makes the 2:1 bet fair?  Use manipulation of number of Students to tune Brownlows earnings to zero.
 
